added new notes

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -418,6 +418,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Amazon SageMaker Model Monitor\n",
+    "\n",
+    "- Model quality monitor: Monitors the performance of a model by computing the accuracy from the predictions and the actual ground-truth labels\n",
+    "- Data quality monitor: Monitors data statistical characteristics of the inference data by comparing the characteristics to that of the baseline training data\n",
+    "- Model explainability monitor: Integrates with SageMaker Clarify to compute feature attribution, using the Shapley value, over time\n",
+    "- Model bias monitor: Integrates with SageMaker Clarify to monitor predictions for data and model prediction bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
