added new notes

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -430,7 +430,36 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "data_capture_config = DataCaptureConfig(enable_capture=True,\n",
+    "\n",
+    "           sampling_percentage=100,                                         \n",
+    "\n",
+    "           destination_s3_uri=s3_capture_upload_path)\n",
+    "\n",
+    "predictor = xgb.deploy(...,\n",
+    "\n",
+    "               data_capture_config=data_capture_config)\n",
+    "\n",
+    "pred=predictor.predict(df_val[columns_no_target].values)\n",
+    "\n",
+    "pred_f = [float(i) for i in pred[0]]\n",
+    "\n",
+    "df_val['Prediction']=pred_f\n",
+    "\n",
+    "model_quality_baseline_suffix = 'abalone/abalone_val_model_quality_baseline.csv'\n",
+    "\n",
+    "df_val[['Rings', 'Prediction']].to_csv(model_quality_baseline_suffix, index=False)\n",
+    "\n",
+    "model_quality_baseline_s3 = sagemaker.s3.S3Uploader.upload(\n",
+    "\n",
+    "        local_path=model_quality_baseline_suffix,\n",
+    "\n",
+    "        desired_s3_uri=desired_s3_uri,\n",
+    "\n",
+    "        sagemaker_session=sess)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
