--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -471,6 +471,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Here are the high-level steps involved in the batch ingestion architecture:\n",
+    "\n",
+    "- Bulk raw data is available in an S3 bucket.\n",
+    "- The Amazon SageMaker Processing job takes raw data as input and applies feature engineering techniques to the data. The processing job can be configured to run on a distributed cluster of instances to process data at scale.\n",
+    "- The processing job also ingests the engineered features ingested into the online store of the feature group, using the PutRecord API. Features are then automatically replicated to the offline store of the feature group.\n",
+    "- Features from the offline store can then be used for training other models and by other data science teams to address a wide variety of other use cases. Features from the online store can be used for feature lookup during real-time predictions.\n",
+    "- Note that if the feature store used in this architecture is offline only, the processing job can directly write into the offline store using the PutRecord API."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
