--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -484,6 +484,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- Raw data lands in an S3 bucket, which triggers an AWS Lambda function.\n",
+    "- The Lambda function processes data and inserts features into the online store of the feature group, using the PutRecord API.\n",
+    "- Features are then automatically replicated to the offline store of the feature group.\n",
+    "- Features from the offline store can then be used for training other models and by other data science teams to address a wide variety of other use cases. Features from the online store can be used for feature lookup during real-time predictions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
