added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -510,7 +510,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Update the product variant weight to route 60% of traffic to VariantB\n",
+    "\n",
+    "sm.update_endpoint_weights_and_capacities(\n",
+    "\n",
+    "           EndpointName=endpoint_name,\n",
+    "\n",
+    "           DesiredWeightsAndCapacities=[\n",
+    "\n",
+    "          {\"DesiredWeight\": 4, \"VariantName\": variantA[\"VariantName\"]},\n",
+    "\n",
+    "          {\"DesiredWeight\": 6, \"VariantName\": variantB[\"VariantName\"]},\n",
+    "\n",
+    "          ],\n",
+    "\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
