added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -527,6 +527,34 @@
     "\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update the endpoint to point to VariantB\n",
+    "\n",
+    "endpoint_config_new =f\"abtest-b-config-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "\n",
+    "smsession.create_endpoint_config_from_existing (\n",
+    "\n",
+    "            existing_config_name=endpoint_name,\n",
+    "\n",
+    "            new_config_name=endpoint_config_new,\n",
+    "\n",
+    "            new_production_variants=[variantB]\n",
+    "\n",
+    ")\n",
+    "\n",
+    "##Update the endpoint\n",
+    "\n",
+    "smsession.update_endpoint(endpoint_name=endpoint_name, endpoint_config_name=endpoint_config_new, wait=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
