added new model

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -89,6 +89,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## R2\n",
+    "\n",
+    "### Or coefficient of determination, is a statistical measure that represents the proportion of the variance in the dependent variable that is predictable from the independent variables. It provides an indication of goodness of fit and is often used to analyze how well predictions from a regression model approximate the real data points. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
