added new notes

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## You can use Amazon SageMaker Batch Transform to exclude attributes before running predictions. You can also join the prediction results with partial or entire input data attributes when using data that is in CSV, text, or JSON format. This eliminates the need for any additional pre-processing or post-processing and accelerates the overall ML process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
