--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -162,11 +162,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Number of Shards based on Data Throughput=⌈ \n",
+    "#### Shard Limit (MB/s)\n",
+    "/ \n",
+    "#### Data Rate (MB/s)⌉\n",
+    "\n",
+    "### Number of Shards based on Transaction Rate=⌈ \n",
+    "#### Shard Limit (records/s)\n",
+    "/\n",
+    "#### Transaction Rate (records/s)\n",
+    "​\n",
+    " ⌉"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kb = 8 \n",
+    "\n",
+    "incoming = kb * 1000\n",
+    "\n",
+    "max(incoming, 8*1000)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,8 +215,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
